Updated privacy policy.

--- a/On Site Files/public_html/privacyPolicy.html
+++ b/On Site Files/public_html/privacyPolicy.html
@@ -76,7 +76,7 @@
 
         <span class="sub-heading">Your Rights</span>
 
-        <p>If you wish to opt out of further communications from us, or if you wish to review, delete and/or revise the Personal Information we have stored about you, please contact us with your specific request at raynertanxw@me.com; provided, however, that we reserve the right to retain an archive of such Personal Information for a commercially reasonable time to ensure that its deletion does not affect the integrity of our data and we further reserve the right to retain an anonymous version of such information.</p>
+        <p>If you wish to opt out of further communications from us, or if you wish to review, delete and/or revise the Personal Information we have stored about you, please contact us with your specific request at support@raynertanxw.me; provided, however, that we reserve the right to retain an archive of such Personal Information for a commercially reasonable time to ensure that its deletion does not affect the integrity of our data and we further reserve the right to retain an anonymous version of such information.</p>
 
         <p>If you wish to opt out of push notifications, select the Settings tab for the applicable Game/App, and follow the necessary prompts to opt out of further push notifications.</p>
 
@@ -90,7 +90,7 @@
 
         <span class="sub-heading">Children</span>
 
-        <p>While the Games/Apps may be visited and/or played by children, we do not knowingly collect or use any Personal Information from children under the age of 13 and hereby specifically prohibit any user under the age of 13 from providing us with any Personal Information. If you are a parent of a child under 13 years of age and you believe your child has provided us with Personal Information, please contact us at raynertanxw@me.com and we will delete the information from our system.</p>
+        <p>While the Games/Apps may be visited and/or played by children, we do not knowingly collect or use any Personal Information from children under the age of 13 and hereby specifically prohibit any user under the age of 13 from providing us with any Personal Information. If you are a parent of a child under 13 years of age and you believe your child has provided us with Personal Information, please contact us at support@raynertanxw.me and we will delete the information from our system.</p>
 
         <p>We may collect a device ID or other persistent identifier linked to the device or computer that may be used by a child to play our Games/Apps. The data collected will be anonymous and not tied to any Personal Information. In addition, this data will be used solely for internal purposes such as personalization of content, security, and contextual (not behavioral) advertising.</p>
 
@@ -108,7 +108,7 @@
 
         <p>If there is a breach of security involving your credit card information from our Games/Apps, we will inform you immediately and take commercially reasonable steps to rectify such breach.</p>
 
-        <p>If you believe your Personal Information is being improperly used by us or any third party, please immediately notify us via email at raynertanxw@me.com.</p>
+        <p>If you believe your Personal Information is being improperly used by us or any third party, please immediately notify us via email at support@raynertanxw.me.</p>
 
         <p>In the event you choose to establish an account with us, you should not share your login information with anyone.</p>
 
@@ -116,11 +116,11 @@
 
         <p>We do not represent or warrant that our Games/Apps will be available at all times, or that your use of the Games/Apps will be uninterrupted or error-free. We are not responsible for your ability to access the Games/Apps or for matters beyond our control.</p>
 
-        <p>If you have any general questions about our Privacy Policy, please contact us at raynertanxw@me.com.</p>
+        <p>If you have any general questions about our Privacy Policy, please contact us at support@raynertanxw.me.</p>
 
         <br>
         <br>
-        <p>Last modified: 19th May 2017</p>
+        <p>Last modified: 20th May 2017</p>
 
     </div>
 
