--- a/_public/daburutools-downloads.html
+++ b/_public/daburutools-downloads.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/daburutools.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -23,7 +23,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="allProjects.html">WORK</a></li>
+          <li><a href="index.html">WORK</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
 
