--- a/_public/index.html
+++ b/_public/index.html
@@ -15,7 +15,7 @@
     }
     </style>
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -27,7 +27,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="allProjects.html" id="highlighted">WORK</a></li>
+          <li><a href="index.html" id="highlighted">WORK</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
 
