--- a/_public/privacyPolicy.html
+++ b/_public/privacyPolicy.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -21,7 +21,7 @@
             <span class="navtext">RAYNER TAN</span>
 
             <ul class="navitems navtext">
-                <li><a href="allProjects.html">WORK</a></li>
+                <li><a href="index.html">WORK</a></li>
                 <li><a href="about.html" id="highlighted">ABOUT</a></li>
             </ul>
 
