--- a/_public/projectSubPages/comingsoon.html
+++ b/_public/projectSubPages/comingsoon.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -21,7 +21,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="../allProjects.html" id="highlighted">WORK</a></li>
+          <li><a href="../index.html" id="highlighted">WORK</a></li>
           <li><a href="../about.html">ABOUT</a></li>
         </ul>
 
