--- a/_public/projectSubPages/lifeslemons.html
+++ b/_public/projectSubPages/lifeslemons.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../styles/font-awesome-4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -22,7 +22,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="../allProjects.html" id="highlighted">WORK</a></li>
+          <li><a href="../index.html" id="highlighted">WORK</a></li>
           <li><a href="../about.html">ABOUT</a></li>
         </ul>
 
