--- a/_public/index.html
+++ b/_public/index.html
@@ -64,6 +64,21 @@
         </div>
       </a>
 
+
+      <a href="projectSubPages/chessgeon_ver2.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">Chessgeon v2</span>
+            <br>
+            iOS / Android
+          </div>
+
+          <img class="picture-inverse" src="assets/images/chessgeon2.png">
+          
+        </div>
+      </a>
+
       <a href="projectSubPages/chessgeon.html">
         <div class="project grayscale">
 
