--- a/_public/projectSubPages/chessgeon.html
+++ b/_public/projectSubPages/chessgeon.html
@@ -35,12 +35,15 @@
 
       <img src="../assets/images/chessgeon.png" class="app-icon">
 
+      <p><strong>There is a new version of this game. Click <a href="./chessgeon_ver2.html">here</a> to check it out!</strong></p>
+
       <img src="../assets/gifs/chessgeon_1.gif" alt="" class="gif-portrait">
       <br class="sm-only-break">
       <img src="../assets/gifs/chessgeon_2.gif" alt="" class="gif-portrait">
       <br class="sm-only-break">
 
       <br>
+
 
       <p>Chessgeon is an unique twist on traditional chess. Chain cards into combos and clear as many dungeon floors as you can!</p>
 
@@ -50,7 +53,7 @@
 
       <p>The A* also uses a swappable grid system to cater for the five different types of chess piece movements. The Strategy Design Pattern was utilised for this implementation. Each heuristic and neighbour calculation were delegated into the Strategy pattern.</p>
 
-      <p>You can find the source of the project on my GitHub repository here: <a href="https://github.com/raynertanxw/MGPG_Chess-geon">https://github.com/raynertanxw/MGPG_Chess-geon</a> You can also download and try the game on Android by clicking the Android icon below. Or signup for the alpha testing here: <a href="https://play.google.com/apps/testing/com.tanxuewenrayner.Chessgeon">https://play.google.com/apps/testing/com.tanxuewenrayner.Chessgeon</a></p>
+      <p>You can find the source of the project on my GitHub repository here: <a href="https://github.com/raynertanxw/MGPG_Chess-geon" target="_blank">https://github.com/raynertanxw/MGPG_Chess-geon</a></p>
 
 
       <img src="../assets/screenshots/chessgeon_1.png" alt="" class="screenshot-portrait">
