--- a/_public/projectSubPages/daburutools.html
+++ b/_public/projectSubPages/daburutools.html
@@ -46,13 +46,26 @@
 
       <br>
 
+      <img src="../assets/gifs/daburutools_1.gif" alt="" class="gif-portrait">
+
       <p>DaburuTools is a small project of ours with the aim to create reusable tools for Unity Projects. These tools are planned to range from player controller prefabs to FSM auto generation and even an quick and easy to use animation toolset called Actions.</p>
 
       <p>The purpose is for us to import the toolset as an Unity Package into any of our projects when we start on a new one. Feel free to use this repository for your own projects.</p>
 
       <p>Currently, we have developed the flexible animation system, similar in operation to Apple's SKAction class. We have also developed a `Graph` struct data type that can control animation curves and be used as your own non-linear interpolator.</p>
 
-      <p>You can download and use the toolset from here by clicking the download icon. Click the GitHub icon to be linked to the wiki, alternatively you can click here: <a href="https://github.com/Daburu/Daburu-Tools/wiki">https://github.com/Daburu/Daburu-Tools/wiki</a></p>
+      <p>You can download and use the toolset from here by clicking the download icon. Click the GitHub icon to be linked to the wiki, alternatively you can click here: <a href="https://github.com/Daburu/Daburu-Tools/wiki" target="_blank">https://github.com/Daburu/Daburu-Tools/wiki</a></p>
+
+      <img src="../assets/screenshots/daburutools_1.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/daburutools_2.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/daburutools_3.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/daburutools_4.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+
+      <p><strong>EDIT: This toolset has not been updated since 2017 and may no longer work with current version of Unity.</strong></p>
 
       <div class="downloadIcons">
 
