--- a/_public/projectSubPages/different.html
+++ b/_public/projectSubPages/different.html
@@ -51,7 +51,7 @@
 
       <br>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/12B0eDuKYOc" frameborder="0" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/8Kb9eFiGlTw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <br>
 
@@ -59,7 +59,7 @@
 
       <p>The goal of Different is simple. Keep the orange Belp and AT LEAST one blue Pleb alive! To keep them alive, simply avoid all obstacles. Left click to attract blue Plebs and repel the orange Belp. Right click to repel blue Plebs and attract the orange Belp. Also, by having the blue Plebs contact with the orange Belp, more blue Plebs are produced! Increase your numbers to increase your odds of surviving for as long as you can.</p>
 
-      <p>We gave ourselves the extra challenge of polishing the game to the point where we were happy to publish it on Game Jolt. So if you want to check out the game, you can download it here: <a href="http://gamejolt.com/games/different/142084">http://gamejolt.com/games/different/142084</a> Or you can click the Game Jolt button at the bottom of this page.</p>
+      <p>We gave ourselves the extra challenge of polishing the game to the point where we were happy to publish it on Game Jolt. So if you want to check out the game, you can download it here: <a href="http://gamejolt.com/games/different/142084" target="_blank">http://gamejolt.com/games/different/142084</a> Or you can click the Game Jolt button at the bottom of this page.</p>
 
       <img src="../assets/screenshots/different_1.png" alt="" class="screenshot-landscape">
       <br class="sm-only-break">
@@ -78,7 +78,7 @@
 
       <div class="downloadIcons">
 
-        <a href="http://gamejolt.com/games/different/142084" class="downloadIcon">
+        <a href="http://gamejolt.com/games/different/142084" class="downloadIcon" target="_blank">
           <img src="../assets/misc/gamejolt-download.png">
         </a>
 
