--- a/_public/projectSubPages/dontspam.html
+++ b/_public/projectSubPages/dontspam.html
@@ -61,8 +61,9 @@
 
       <br>
       <p>You can check the game out at the iTunes App Store and Google Play Store by clicking the buttons below.</p>
+      <p><strong>EDIT: The game is no longer supported and has been retired from the App Store and Google Play Store.</strong></p>
 
-      <div class="downloadIcons">
+      <!-- <div class="downloadIcons">
 
         <a href="https://itunes.apple.com/us/app/dontspam/id977630760?mt=8" class="downloadIcon" target="_blank">
           <i class="fa fa-apple fa-3x fa-border"></i>
@@ -72,7 +73,7 @@
           <i class="fa fa-android fa-3x fa-border"></i>
         </a>
 
-      </div>
+      </div> -->
 
       <br>
       <br>
