--- a/_public/projectSubPages/shapeflip.html
+++ b/_public/projectSubPages/shapeflip.html
@@ -55,14 +55,15 @@
       <br class="sm-only-break">
 
       <p>You can check the game out at the iTunes App Store by clicking the download button below.</p>
+      <p><strong>EDIT: The game is no longer supported and has been retired from the App Store and Google Play Store.</strong></p>
 
       <br>
 
-      <a href="https://itunes.apple.com/us/app/shapeflip/id970287701?mt=8" target="_blank">
+      <!-- <a href="https://itunes.apple.com/us/app/shapeflip/id970287701?mt=8" target="_blank">
         <div class="button">
           <span>Download</span>
         </div>
-      </a>
+      </a> -->
 
       <div id="moreProjectsButton"></div>
 
