--- a/_public/projectSubPages/cellulose.html
+++ b/_public/projectSubPages/cellulose.html
@@ -44,7 +44,7 @@
 
       <br>
 
-      <p style="text-align:center">Cellulose is a finalist in the <a href="http://www.sitfawards.com/">SiTF Awards</a> 2016
+      <p style="text-align:center">Cellulose is a finalist in the <a href="http://www.sitfawards.com/" target="_blank">SiTF Awards</a> 2016
       <br>
       <strong>And won the Special Mention Award.</strong>
       <br>
@@ -58,7 +58,9 @@
 
       <p>The game has been released on the iOS App Store and Google Play Store. Click the respective buttons below to download from the respective stores.</p>
 
-      <p>You can find the source of the project on our GitHub repository here: <a href="https://github.com/raynertanxw/GDP_Cellulose">https://github.com/raynertanxw/GDP_Cellulose</a> You can also download a Windows port (as our game is single-touch, mouse controls work nicely) by clicking the Windows icon below.</p>
+      <p><strong>EDIT: The game is no longer supported and has been retired from the App Store and Google Play Store.</strong></p>
+
+      <p>You can find the source of the project on our GitHub repository here: <a href="https://github.com/raynertanxw/GDP_Cellulose" target="_blank">https://github.com/raynertanxw/GDP_Cellulose</a> You can also download a Windows port (as our game is single-touch, mouse controls work nicely) by clicking the Windows icon below.</p>
 
 
       <img src="../assets/screenshots/cellulose_1.png" alt="" class="screenshot-portrait">
@@ -73,13 +75,13 @@
 
       <div class="downloadIcons">
 
-        <a href="https://play.google.com/store/apps/details?id=com.tanxuewenrayner.Cellulose" class="downloadIcon">
+        <!-- <a href="https://play.google.com/store/apps/details?id=com.tanxuewenrayner.Cellulose" class="downloadIcon">
           <i class="fa fa-android fa-3x fa-border"></i>
         </a>
 
         <a href="https://itunes.apple.com/us/app/cellulose-pursuit/id1132839388?ls=1&mt=8" class="downloadIcon">
           <i class="fa fa-apple fa-3x fa-border"></i>
-        </a>
+        </a> -->
 
         <a href="../downloads/cellulose/submissionBuilds/GDP_Cellulose_WindowsPort.zip" class="downloadIcon">
           <i class="fa fa-windows fa-3x fa-border"></i>
