--- a/_public/projectSubPages/towerpower.html
+++ b/_public/projectSubPages/towerpower.html
@@ -50,18 +50,18 @@
       <img src="../assets/images/steamvr.png" class="app-icon">
 
       <br>
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/OMFVEDYpkZU" frameborder="0" allowfullscreen></iframe>
-
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/OMFVEDYpkZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <br>
 
-      <p>Tower Power is a co-op asynchronous multiplayer VR game featured in Unity Showcase at Unite Singapore 2016. I was one of the three programmers on the development team from the Diploma in Game Design and Development at Temasek Polytechnic.</p>
+      <p>Tower Power is a co-op asynchronous multiplayer VR game featured in Unity Showcase at Unite Singapore 2016 conference. I was one of the three programmers on the development team from the Diploma in Game Design and Development at Temasek Polytechnic.</p>
 
       <p>Play the role of God to place towers and strategically to defend against your enemies. Alternatively, you can be the Hero on the ground skirmishing through the hordes of enemy with your ever powerful sword and shield. Importantly work together for the win! Use your towers wisely! For the kingdom!</p>
 
       <p>During the 9 weeks of development, I had to pick up and learn Unity Networking. By the end of it, I was able to grasp sufficient knowlegde to synchronise hundreds of enemy units across multiple clients.</p>
 
       <p>Tower Power was also awarded the Best Project Prize at the TP InfoTech Day 2017.</p>
+
+      <p>The animations and events systems are all handled by my custom helper tool <a href="./daburutools.html">Daburu Tools</a> which I made as a plugin for Unity for various projects.</p>
 
       <img src="../assets/screenshots/towerpower_1.png" alt="" class="screenshot-landscape">
       <br class="sm-only-break">
