--- a/_public/about.html
+++ b/_public/about.html
@@ -35,22 +35,36 @@
         <img src="./assets/images/profile_pic.png" alt="" class="app-icon">
 
         <span id="contact-details">
-        Email &nbsp;&nbsp;&nbsp;– raynertanxw@me.com
-        <br>
-        Twitter – @raynertanxw
+        Email &nbsp;&nbsp;&nbsp;–&nbsp;&nbsp; raynertanxw@me.com
         <br>
         <a target="_blank" href="./assets/pdfs/RaynerTan_Resume_16May2017.pdf">Click here for resume</a>
+        <br>
+        <br>
+        Testimonials:
+        <br>
+        <a target="_blank" href="./assets/pdfs/Pacific Basin Negotiators Letter of Recommendation - Rayner Tan.pdf">Testimonial from Pacific Basin Negotiators Managing Director</a>
+        <br>
+        <a target="_blank" href="./assets/pdfs/Retired Professional Reference - Rayner Tan.pdf">Testimonial from retired industry professional</a>
+        <br>
+        <a target="_blank" href="./assets/pdfs/LandShark Letter Of Recommendation - Rayner Tan.pdf">Testimonial from Co-founder of LandShark Games Pte. Ltd.</a>
+        <br>
+        <a target="_blank" href="./assets/pdfs/University of Curtin Letter Of Recommendation - Rayner Tan.pdf">Testimonial from University of Curtin Professor</a>
+        <br>
         </span>
 
-        <p>Hello there! I am Rayner Tan, an aspiring game developer.</p>
+        <br>
+        <br>
+        <p>Hello there! I am Rayner Tan, I do software development.</p>
 
-        <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. Having learnt 3D modelling in Autodesk Maya in a school module, I have also started making basic 3D assets. I have been programming since the age of 13, and started out by exploring javascript to create a quadratic formula calculator.</p>
+        <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games and software I make. Having learnt 3D modelling in Autodesk Maya in a school module, I have also started making basic 3D assets (I can use Blender as well). I have been programming since the age of 13, and started out by exploring javascript to create a quadratic formula calculator.</p>
 
         <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I also have experience in making games and applications using Unity Game Engine and Xcode.</p>
 
-        <p>My hobbies include gaming, Chinese Calligraphy, Origami, and collecting. I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
+        <p>I've worked as a full-time game programmer for LandShark Games Pte. Ltd. during which I designed and built a reusable client-server caching system, established Unity iOS build pipelines, writing various tools and plugins. I also worked on many systems including asset management enhancements, debug tools and environments, new gameplay features, etc.</p>
 
-        <p>I am also a huge food lover and enjoy scenic views such as those of Yosemite, and the beautiful Sakura trees during full bloom in Shinjuku Gyoen.</p>
+        <p>My hobbies include reading, cooking, gaming, fountain pens, Chinese calligraphy, origami, and collecting things! I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
+
+        <p>I am also a huge food lover and enjoy scenic views such as those of Yosemite, and the beautiful Sakura trees during full bloom in Shinjuku Gyoen. I love travelling and seeing sights. But I also enjoy time alone reflecting, pondering, and journaling.</p>
 
         <hr>
 
@@ -63,22 +77,10 @@
             <li>Familiar with Design Patterns</li>
             <li>Proficient in Swift, C#, and C++ programming languages</li>
             <li>Experienced in Unity Game Engine, Xcode IDE</li>
-            <li>Trained in Adobe Photoshop and Autodesk Maya</li>
-            <li>Possess basic Web Development skills</li>
+            <li>Professionally trained in Adobe Photoshop and Autodesk Maya</li>
+            <li>Possesses basic Web Development skills</li>
         </ul>
 
-        <hr>
-
-        <span class="heading">Education</span>
-
-        <p>I studied in the Diploma in Game Design and Development at Temasek Polytechnic, graduating top of the course and was award The Lee Kuan Yew Award for Mathematics and Science, given to top technology and science graduates. Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
-
-        <span class="content-text">List of Schools:</span>
-        <ul class="content-text">
-            <li>Temasek Polytechnic (TP) – Diploma in Game Design and Development (GDD) <em>2014 - 2017</em></li>
-            <li>School of Science and Technology, Singapore (SST) <em>2010 - 2013</em></li>
-            <li>Loyang Primary School (LPS) <em>2004 - 2009</em></li>
-        </ul>
 
         <hr>
 
@@ -111,18 +113,37 @@
 
         <span class="content-text">List of Competitions:</span>
         <ul class="content-text">
-            <li>SiTF Awards 2016 Best Presenter Award</li>
-            <li>SiTF Awards 2016 Project Special Mention Award</li>
-            <li>Amazing Science-X Challenge – Special Mention Award (2010)</li>
-            <li>Australian Mathematics Competiton – Certificate of Distinction (2011)</li>
-            <li>Australian National Chemistry Quiz – Certificate of Merit (2012)</li>
-            <li>Friends of Singa – Merit Award (2011)</li>
+          <li>Singapore Computer Society - IT Youth of the Year Award Finalist (2019)</li>
+          <li>TP InfoTech Day 2017 Best Project Award</li>
+          <li>SiTF Awards 2016 Best Presenter Award</li>
+          <li>SiTF Awards 2016 Project Special Mention Award</li>
+          <li>Amazing Science-X Challenge – Special Mention Award (2010)</li>
+          <li>Australian Mathematics Competiton – Certificate of Distinction (2011)</li>
+          <li>Australian National Chemistry Quiz – Certificate of Merit (2012)</li>
+          <li>Friends of Singa – Merit Award (2011)</li>
         </ul>
 
         <span class="content-text">Miscellaneous</span>
         <ul class="content-text">
-            <li>Part of self-initiated service group that raised $4,000 for Japan Red Cross to aid in disaster relief efforts after the 2011 Tōhoku Earthquake</li>
-            <li>Exhibitionist at EduTech Seminar on FS@SG: Mobile Learning Activities (2011)</li>
+          <li>Volunteered full-time for 2 years (2019-2021) as a social worker (missionary), serving diverse communities in Melbourne Australia. </li>
+          <li>Part of self-initiated service group that raised $4,000 for Japan Red Cross to aid in disaster relief efforts after the 2011 Tōhoku Earthquake</li>
+          <li>Exhibitionist at EduTech Seminar on FS@SG: Mobile Learning Activities (2011)</li>
+        </ul>
+
+
+
+
+        <hr>
+
+        <span class="heading">Education</span>
+
+        <p>I studied in the Diploma in Game Design and Development at Temasek Polytechnic, graduating top of the course and was award The Lee Kuan Yew Award for Mathematics and Science, a national-level award given to top technology and science graduates (only 15 individuals in the nation per year). Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
+
+        <span class="content-text">List of Schools:</span>
+        <ul class="content-text">
+            <li>Temasek Polytechnic (TP) – Diploma in Game Design and Development (GDD) <em>2014 - 2017</em></li>
+            <li>School of Science and Technology, Singapore (SST) <em>2010 - 2013</em></li>
+            <li>Loyang Primary School (LPS) <em>2004 - 2009</em></li>
         </ul>
 
     </div>
