Added Chessgeon v2 to small size

--- a/_public/index.html
+++ b/_public/index.html
@@ -212,6 +212,26 @@
 
       <div class="project-bar-sm">
         <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/chessgeon2.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Chessgeon v2</span>
+          <br>
+          <span class="sub-heading">iOS / Android</span>
+          <br>
+          <a href="projectSubPages/chessgeon_ver2.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
           <img class="picture-inverse" src="assets/images/chessgeon.png">
         </div>
 
