Fixed small formatting issues

--- a/_public/index.html
+++ b/_public/index.html
@@ -75,7 +75,7 @@
           </div>
 
           <img class="picture-inverse" src="assets/images/chessgeon2.png">
-          
+
         </div>
       </a>
 
@@ -216,7 +216,7 @@
         </div>
 
         <div class="description-sm">
-          <span class="heading">Chessgeon v2</span>
+          <span class="heading">Chessgeon<br/>ver. 2</span>
           <br>
           <span class="sub-heading">iOS / Android</span>
           <br>
