rerouted to about as landing

--- a/_public/index.html
+++ b/_public/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -8,12 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <style>
-    .button-sm
-    {
-      display: inline-block;
-    }
-    </style>
 
     <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
@@ -27,341 +22,137 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="index.html" id="highlighted">WORK</a></li>
-          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="works.html">WORK</a></li>
+          <li><a href="about.html" id="highlighted">ABOUT</a></li>
         </ul>
 
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-sm">
+
+        <span class="heading">About Me</span>
+
+        <img src="./assets/images/profile_pic.png" alt="" class="app-icon">
+
+        <span id="contact-details">
+        Email &nbsp;&nbsp;&nbsp;–&nbsp;&nbsp; raynertanxw@me.com
+        <br>
+        <a target="_blank" href="./assets/pdfs/RaynerTan_Resume_10Nov2021.pdf">Click here for resume</a>
+        <br>
+        <br>
+        Testimonials:
+        <br>
+        <a target="_blank" href="./assets/pdfs/Pacific Basin Negotiators Letter of Recommendation - Rayner Tan.pdf">Testimonial from Pacific Basin Negotiators Managing Director</a>
+        <br>
+        <a target="_blank" href="./assets/pdfs/Retired Professional Reference - Rayner Tan.pdf">Testimonial from retired industry professional</a>
+        <br>
+        <a target="_blank" href="./assets/pdfs/LandShark Letter Of Recommendation - Rayner Tan.pdf">Testimonial from Co-founder of LandShark Games Pte. Ltd.</a>
+        <br>
+        <a target="_blank" href="./assets/pdfs/University of Curtin Letter Of Recommendation - Rayner Tan.pdf">Testimonial from University of Curtin Professor</a>
+        <br>
+        </span>
+
+        <br>
+        <br>
+        <p>Hello there! I am Rayner Tan, I do software development.</p>
+
+        <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games and software I make. Having learnt 3D modelling in Autodesk Maya in a school module, I have also started making basic 3D assets (I can use Blender as well). I have been programming since the age of 13, and started out by exploring javascript to create a quadratic formula calculator.</p>
+
+        <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I also have experience in making games and applications using Unity Game Engine and Xcode.</p>
+
+        <p>I've worked as a full-time game programmer for LandShark Games Pte. Ltd. during which I designed and built a reusable client-server caching system, established Unity iOS build pipelines, writing various tools and plugins. I also worked on many systems including asset management enhancements, debug tools and environments, new gameplay features, etc.</p>
+
+        <p>My hobbies include reading, cooking, gaming, fountain pens, Chinese calligraphy, origami, and collecting things! I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
+
+        <p>I am also a huge food lover and enjoy scenic views such as those of Yosemite, and the beautiful Sakura trees during full bloom in Shinjuku Gyoen. I love travelling and seeing sights. But I also enjoy time alone reflecting, pondering, and journaling.</p>
+
+        <hr>
+
+        <span class="heading">Technical Skills</span>
+
+        <p>I actively seek to pick up new skills and gain knowledge in fields that interest me. My current skills are as follows.</p>
+
+        <span class="content-text">Current Skills:</span>
+        <ul class="content-text">
+            <li>Familiar with Design Patterns</li>
+            <li>Proficient in Swift, C#, and C++ programming languages</li>
+            <li>Experienced in Unity Game Engine, Xcode IDE</li>
+            <li>Professionally trained in Adobe Photoshop and Autodesk Maya</li>
+            <li>Possesses basic Web Development skills</li>
+        </ul>
+
+
+        <hr>
+
+        <span class="heading">Achievements</span>
+
+        <p>Over the years I have joined various competitions and won a number of awards. Listed below are some of these awards and competitions.</p>
+
+        <span class="content-text">List of Academic Awards:</span>
+        <ul class="content-text">
+            <li>Diploma with Merit in Game Design and Development, Temasek Polytechnic</li>
+            <ul>
+                <li>The Lee Kuan Yew Award for Mathetics and Science</li>
+                <li>Course Gold Medal</li>
+                <li>Infocomm Media Development Authority (IMDA) Excellence Award</li>
+                <li>Jurong Port Special Industry Prize</li>
+                <li>Jurong Port Project Prize</li>
+                <li>Jurong Port Prize</li>
+            </ul>
+            <li>School of Science and Technology Singapore</li>
+            <ul>
+                <li>Top O-Level Performers (2014 Celebrations@SST)</li>
+                <li>Outstanding All Rounder Student Awards 2011 – School Level Award (North West Community Development Council)</li>
+                <li>Edusave Certificate of Academic Achievement 2013 (Ministry of Education)</li>
+                <li>Edusave Certificate of Academic Achievement 2011 (Ministry of Education)</li>
+                <li>SST Achievement Award (2012 Celebrations@SST)</li>
+                <li>SST Achievement Award (2011 Celebrations@SST)</li>
+            </ul>
+        </ul>
+
+
+        <span class="content-text">List of Competitions:</span>
+        <ul class="content-text">
+          <li>Singapore Computer Society - IT Youth of the Year Award Finalist (2019)</li>
+          <li>TP InfoTech Day 2017 Best Project Award</li>
+          <li>SiTF Awards 2016 Best Presenter Award</li>
+          <li>SiTF Awards 2016 Project Special Mention Award</li>
+          <li>Amazing Science-X Challenge – Special Mention Award (2010)</li>
+          <li>Australian Mathematics Competiton – Certificate of Distinction (2011)</li>
+          <li>Australian National Chemistry Quiz – Certificate of Merit (2012)</li>
+          <li>Friends of Singa – Merit Award (2011)</li>
+        </ul>
+
+        <span class="content-text">Miscellaneous</span>
+        <ul class="content-text">
+          <li>Volunteered full-time for 2 years (2019-2021) as a social worker (missionary), serving diverse communities in Melbourne Australia. </li>
+          <li>Part of self-initiated service group that raised $4,000 for Japan Red Cross to aid in disaster relief efforts after the 2011 Tōhoku Earthquake</li>
+          <li>Exhibitionist at EduTech Seminar on FS@SG: Mobile Learning Activities (2011)</li>
+        </ul>
 
-      <a href="projectSubPages/daburutools.html">
-        <div class="project grayscale">
 
-          <div class="description">
-            <span class="heading">DaburuTools</span>
-            <br>
-            Unity Tools
-          </div>
 
-          <img class="picture-inverse" src="assets/images/daburutools.png">
 
-        </div>
-      </a>
+        <hr>
 
-      <a href="projectSubPages/towerpower.html">
-        <div class="project grayscale">
+        <span class="heading">Education</span>
 
-          <div class="description">
-            <span class="heading">Tower Power</span>
-            <br>
-            SteamVR
-          </div>
+        <p>I studied in the Diploma in Game Design and Development at Temasek Polytechnic, graduating top of the course and was award The Lee Kuan Yew Award for Mathematics and Science, a national-level award given to top technology and science graduates (only 15 individuals in the nation per year). Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
 
-          <img class="picture-inverse" src="assets/images/steamvr.png">
-
-        </div>
-      </a>
-
-
-      <a href="projectSubPages/chessgeon_ver2.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">Chessgeon v2</span>
-            <br>
-            iOS / Android
-          </div>
-
-          <img class="picture-inverse" src="assets/images/chessgeon2.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/chessgeon.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">Chessgeon</span>
-            <br>
-            iOS / Android
-          </div>
-
-          <img class="picture-inverse" src="assets/images/chessgeon.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/different.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">Different</span>
-            <br>
-            PC Game
-          </div>
-
-          <img class="picture-inverse" src="assets/images/different.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/cellulose.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">Cellulose</span>
-            <br>
-            iOS / Android
-          </div>
-
-          <img class="picture-inverse" src="assets/images/cellulose.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/lifeslemons.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">Life's Lemons</span>
-            <br>
-            PC Game
-          </div>
-
-          <img class="picture-inverse" src="assets/images/lifeslemons.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/dontspam.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">DontSpam</span>
-            <br>
-            iOS / Android
-          </div>
-
-          <img class="picture-inverse" src="assets/images/dontspam.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/shapeflip.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">ShapeFlip</span>
-            <br>
-            iOS Game
-          </div>
-
-          <img class="picture" src="assets/images/shapeflip.png">
-
-        </div>
-      </a>
-
-
-
-
-    <!--sm projects-->
-
-    <div class="project-wrapper-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/daburutools.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Daburu<br/>Tools</span>
-          <br>
-          <span class="sub-heading">Unity Tools</span>
-          <br>
-          <a href="projectSubPages/daburutools.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/steamvr.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Tower<br/>Power</span>
-          <br>
-          <span class="sub-heading">SteamVR</span>
-          <br>
-          <a href="projectSubPages/towerpower.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/chessgeon2.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Chessgeon<br/>ver. 2</span>
-          <br>
-          <span class="sub-heading">iOS / Android</span>
-          <br>
-          <a href="projectSubPages/chessgeon_ver2.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/chessgeon.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Chessgeon</span>
-          <br>
-          <span class="sub-heading">iOS / Android</span>
-          <br>
-          <a href="projectSubPages/chessgeon.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/different.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Different</span>
-          <br>
-          <span class="sub-heading">PC Game</span>
-          <br>
-          <a href="projectSubPages/different.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/cellulose.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Cellulose</span>
-          <br>
-          <span class="sub-heading">iOS / Android</span>
-          <br>
-          <a href="projectSubPages/cellulose.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/lifeslemons.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Life's</span>
-          <br>
-          <span class="heading">Lemons</span>
-          <br>
-          <span class="sub-heading">PC Game</span>
-          <br>
-          <a href="projectSubPages/lifeslemons.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture-inverse" src="assets/images/dontspam.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">DontSpam</span>
-          <br>
-          <span class="sub-heading">iOS / Android</span>
-          <br>
-          <a href="projectSubPages/dontspam.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture" src="assets/images/shapeflip.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">ShapeFlip</span>
-          <br>
-          <span class="sub-heading">iOS Game</span>
-          <br>
-          <a href="projectSubPages/shapeflip.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
+        <span class="content-text">List of Schools:</span>
+        <ul class="content-text">
+            <li>Temasek Polytechnic (TP) – Diploma in Game Design and Development (GDD) <em>2014 - 2017</em></li>
+            <li>School of Science and Technology, Singapore (SST) <em>2010 - 2013</em></li>
+            <li>Loyang Primary School (LPS) <em>2004 - 2009</em></li>
+        </ul>
 
     </div>
 
     <div class="footer"></div>
-
   </div>
 
-
-
   </body>
-
 
   <!--JQuery-->
   <script type="text/javascript" src="scripts/jquery.min.js"></script>
