--- a/_public/about.html
+++ b/_public/about.html
@@ -21,7 +21,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="index.html">WORK</a></li>
+          <li><a href="works.html">WORK</a></li>
           <li><a href="about.html" id="highlighted">ABOUT</a></li>
         </ul>
 
