--- a/_public/daburutools-downloads.html
+++ b/_public/daburutools-downloads.html
@@ -23,7 +23,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="index.html">WORK</a></li>
+          <li><a href="works.html">WORK</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
 
