--- a/_public/projectSubPages/daburutools.html
+++ b/_public/projectSubPages/daburutools.html
@@ -31,7 +31,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="../index.html" id="highlighted">WORK</a></li>
+          <li><a href="../works.html" id="highlighted">WORK</a></li>
           <li><a href="../about.html">ABOUT</a></li>
         </ul>
 
