Added Temasek Poly Testimonial

--- a/_public/about.html
+++ b/_public/about.html
@@ -50,6 +50,8 @@
         <br>
         <a target="_blank" href="./assets/pdfs/University of Curtin Letter Of Recommendation - Rayner Tan.pdf">Testimonial from University of Curtin Professor</a>
         <br>
+        <a target="_blank" href="./assets/webarchive/WebArchive_OurStudents_RaynerTanXueWen_TemasekPolytechnic.html">Testimonial from Temasek Polytechnic, Singapore</a>
+        <br>
         </span>
 
         <br>
