--- a/_public/index.html
+++ b/_public/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
   <head>
@@ -50,6 +49,8 @@
         <a target="_blank" href="./assets/pdfs/LandShark Letter Of Recommendation - Rayner Tan.pdf">Testimonial from Co-founder of LandShark Games Pte. Ltd.</a>
         <br>
         <a target="_blank" href="./assets/pdfs/University of Curtin Letter Of Recommendation - Rayner Tan.pdf">Testimonial from University of Curtin Professor</a>
+        <br>
+        <a target="_blank" href="./assets/webarchive/WebArchive_OurStudents_RaynerTanXueWen_TemasekPolytechnic.html">Testimonial from Temasek Polytechnic, Singapore</a>
         <br>
         </span>
 
